--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v5.0.0
 
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@88dc2356392166efad76775c878094f4e83ff746 #@v1
+        uses: dtolnay/rust-toolchain@master
         with:
           profile: minimal
           toolchain: stable
