--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -1,12 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# rust-clippy is a tool that runs a bunch of lints to catch common
-# mistakes in your Rust code and help improve your Rust code.
-# More details at https://github.com/rust-lang/rust-clippy
-# and https://rust-lang.github.io/rust-clippy/
-
 name: rust-clippy analyze
 
 on:
@@ -23,29 +14,91 @@ jobs:
     name: Run rust-clippy analyzing
     runs-on: ubuntu-latest
     permissions:
+      pull-requests: write
       contents: write
+      checks: write          # allow the clippy-action to write check runs
       security-events: write
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      actions: write          # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
       - name: Checkout code
         uses: actions/checkout@v5.0.0
-
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
-          toolchain: stable
-          components: clippy
-          override: true
+          fetch-depth: 0
+          persist-credentials: false   # important: let the following action use the GITHUB_TOKEN you pass via env. See action README. :contentReference[oaicite:1]{index=1}
 
-      - name: Install required cargo
-        run: cargo install clippy-sarif sarif-fmt
+      # Use step-security/setup-crate to set up the Rust toolchain
+      - name: Setup Rust toolchain (step-security/setup-crate)
+        uses: step-security/setup-crate@1.4.0
 
-      - name: Run rust-clippy
-        run:
-          cargo clippy
-          --all-features
-          --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
+      - name: Ensure clippy component is available
+        run: |
+          set -euo pipefail
+          rustup component add clippy || true
+
+      - name: Install required cargo tools
+        run: |
+          set -euo pipefail
+          cargo install --force clippy-sarif sarif-fmt
+
+      - name: Apply automatic clippy fixes
+        id: run-fix
+        run: |
+          set -euo pipefail
+          # Run cargo clippy fixes (will modify files if applicable)
+          cargo clippy --fix --allow-dirty --allow-staged --all-targets --all-features || true
+          # expose whether there are working-tree changes
+          if [ -n "$(git status --porcelain)" ]; then
+            echo "changes_detected=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "changes_detected=false" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Create local commit with clippy fixes (if any)
+        id: commit-fixes
+        if: steps.run-fix.outputs.changes_detected == 'true'
+        run: |
+          set -euo pipefail
+          # Configure git user for the commit (if not already set)
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          BRANCH="clippy-fixes/$(date -u +%Y%m%d%H%M%S)"
+          git checkout -b "$BRANCH"
+          git add -A
+          git commit -m "Apply automatic suggestions from cargo clippy --fix"
+          # NOTE: intentionally do NOT push here. The StepSecurity action below will detect local changes and push using the provided token.
+          echo "created_branch=$BRANCH" >> "$GITHUB_OUTPUT"
+
+      - name: Create or update Pull Request for clippy fixes (StepSecurity)
+        if: steps.commit-fixes.outputs.created_branch != ''
+        uses: step-security/create-or-update-pull-request-action@v1.10.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          # Provide the branch that was created locally.
+          branch: ${{ steps.commit-fixes.outputs.created_branch }}
+          # Do NOT set `title` or `body` so the action will generate them automatically.
+          # Ensure the action updates the PR title/body automatically (default behavior);
+          # set this explicitly to true for clarity.
+          update-pull-request-title-and-body: true
+          # Optional: add helpful labels
+          labels: auto-clippy,ci
+
+      # -------------------------
+      # Use step-security/clippy-action for a check-run / annotations
+      # -------------------------
+      - name: Run Clippy (annotations via step-security/clippy-action)
+        uses: step-security/clippy-action@v1.4.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      # -------------------------
+      # Also produce SARIF exactly like before (cargo clippy -> clippy-sarif -> sarif-fmt)
+      # -------------------------
+      - name: Run rust-clippy (output SARIF)
+        run: |
+          set -euo pipefail
+          cargo clippy --all-features --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
         continue-on-error: true
 
       - name: Upload analysis results to GitHub
