--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -1,3 +1,12 @@
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+# rust-clippy is a tool that runs a bunch of lints to catch common
+# mistakes in your Rust code and help improve your Rust code.
+# More details at https://github.com/rust-lang/rust-clippy
+# and https://rust-lang.github.io/rust-clippy/
+
 name: rust-clippy analyze
 
 on:
@@ -6,7 +15,6 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
-  workflow_dispatch: {} 
   schedule:
     - cron: '40 2 * * *'
 
@@ -19,26 +27,33 @@ jobs:
       contents: write
       checks: write          # allow the clippy-action to write check runs
       security-events: write
-      actions: write          # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      actions: read          # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
       - name: Checkout code
         uses: actions/checkout@v5.0.0
         with:
           fetch-depth: 0
-          persist-credentials: false   # important: let the following action use the GITHUB_TOKEN you pass via env. See action README. :contentReference[oaicite:1]{index=1}
+          persist-credentials: false   # let the following action use the GITHUB_TOKEN you pass via env
 
-      # Use step-security/setup-crate to set up the Rust toolchain
-      - name: Setup Rust toolchain (step-security/setup-crate)
-        uses: step-security/setup-crate@v1.4.0
+      # Use dtolnay/rust-toolchain to set up the Rust toolchain
+      - name: Setup Rust toolchain (dtolnay/rust-toolchain)
+        uses: dtolnay/rust-toolchain@master
+        with:
+          profile: minimal
+          toolchain: stable
+          components: clippy
+          override: true
 
       - name: Ensure clippy component is available
         run: |
           set -euo pipefail
+          # Extra ensure step in case the toolchain action didn't add it for some reason
           rustup component add clippy || true
 
       - name: Install required cargo tools
         run: |
           set -euo pipefail
+          # --force ensures the tools are installed/updated if already present
           cargo install --force clippy-sarif sarif-fmt
 
       - name: Apply automatic clippy fixes
@@ -46,6 +61,7 @@ jobs:
         run: |
           set -euo pipefail
           # Run cargo clippy fixes (will modify files if applicable)
+          # allow-dirty/allow-staged permit modifying the working tree
           cargo clippy --fix --allow-dirty --allow-staged --all-targets --all-features || true
           # expose whether there are working-tree changes
           if [ -n "$(git status --porcelain)" ]; then
