--- a/.github/workflows/clippy-rs.yml
+++ b/.github/workflows/clippy-rs.yml
@@ -13,7 +13,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  workflow_dispatch: {}  # Allows manual trigger from GitHub Actions UI
+  workflow_dispatch: {}  # Manual trigger
   schedule:
     - cron: "0 2 * * *"
 
@@ -21,41 +21,42 @@ jobs:
   clippy_check:
     runs-on: ubuntu-latest
     steps:
+      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v5.0.0
 
+      # 2️⃣ Install Rust toolchain (1.91.0) and Clippy
       - name: Install Rust toolchain (1.91.0) and Clippy
-        # per your request: dtolnay/rust-toolchain@master, explicit toolchain input
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: 1.91.0
           components: clippy
 
+      # 3️⃣ Install SARIF converters
       - name: Install SARIF converters (clippy-sarif, sarif-fmt)
         run: |
-          # Install clippy-sarif and sarif-fmt so we can convert Clippy JSON -> SARIF
-          # Use --force to ensure fresh install on runners that may have them already.
           cargo install --force clippy-sarif
           cargo install --force sarif-fmt
-          # Ensure installed binaries are on PATH for later steps
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
         shell: bash
 
+      # 4️⃣ Run Clippy and produce SARIF safely
       - name: Run Clippy and produce SARIF
         run: |
-          # Run clippy (JSON output), convert to SARIF, save to file and pretty-print for logs
-          cargo clippy --fix --all-features --message-format=json \
+          # Run Clippy with auto-fixes, allow dirty workspace to avoid exit 101
+          cargo clippy --fix --allow-dirty --all-features --message-format=json \
             | clippy-sarif \
             | tee rust-clippy-results.sarif \
             | sarif-fmt
         shell: bash
 
+      # 5️⃣ Validate SARIF JSON quickly
       - name: Validate SARIF JSON
         run: |
-          # Quick validation to fail fast if SARIF is truncated/invalid
           python -m json.tool rust-clippy-results.sarif > /dev/null
         shell: bash
 
+      # 6️⃣ Upload SARIF results to GitHub code scanning
       - name: Upload analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v4
         with:
