--- a/.github/workflows/auto-fix.yml
+++ b/.github/workflows/auto-fix.yml
@@ -15,13 +15,14 @@ jobs:
     permissions:
       contents: write    # needed to push branch / create PR (GITHUB_TOKEN)
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v6.0.0
         with:
           fetch-depth: 0
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@master
         with:
+          toolchain: stable
           components: clippy,rustfmt
           override: true
 
