--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -31,7 +31,7 @@ jobs:
       actions: read          # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
       - name: Checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@v6.0.0
         with:
           fetch-depth: 0
           persist-credentials: false   # let the following action use the GITHUB_TOKEN you pass via env
@@ -89,7 +89,7 @@ jobs:
 
       - name: Create or update Pull Request for clippy fixes (StepSecurity)
         if: steps.commit-fixes.outputs.created_branch != ''
-        uses: step-security/create-or-update-pull-request-action@v1.10.2
+        uses: peter-evans/create-pull-request@v7.0.9
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -106,7 +106,7 @@ jobs:
       # Use step-security/clippy-action for a check-run / annotations
       # -------------------------
       - name: Run Clippy (annotations via step-security/clippy-action)
-        uses: step-security/clippy-action@v1.4.0
+        uses: auguwu/clippy-action@v1.4.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
