--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -26,9 +26,9 @@ jobs:
     permissions:
       pull-requests: write
       contents: write
-      checks: write          # allow the clippy-action to write check runs
+      checks: write
       security-events: write
-      actions: read          # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      actions: read 
     steps:
       - name: Checkout code
         uses: actions/checkout@v6.0.0
