--- a/.github/workflows/kani.yml
+++ b/.github/workflows/kani.yml
@@ -33,13 +33,13 @@ jobs:
 
       - name: Format check (rustfmt)
         continue-on-error: true
-        run: cargo fmt --check
+        run: cargo fmt --all --check
 
       - name: Lint strictly (clippy)
         continue-on-error: true
         run: |
           # fail the job on any clippy warning
-          cargo clippy --all-targets --all-features -- -D warnings
+          cargo clippy --fix --all-targets --all-features
 
       - name: Install and run cargo-geiger (unsafe-usage scan)
         continue-on-error: true
