--- a/.github/workflows/auto-fix.yml
+++ b/.github/workflows/auto-fix.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Run rustfmt
         run: |
-          cargo fmt --all
+          cargo fmt --all --check
 
       - name: Re-run tests
         run: |
