--- a/.github/workflows/auto-fix.yml
+++ b/.github/workflows/auto-fix.yml
@@ -52,6 +52,7 @@ jobs:
           cargo clippy --all-targets --all-features --workspace --fix --allow-dirty --allow-staged || true
 
       - name: Run rustfmt
+        continue-on-error: true
         run: |
           cargo fmt --all --check
 
