--- a/.github/workflows/clippy-fmt.yml
+++ b/.github/workflows/clippy-fmt.yml
@@ -31,4 +31,5 @@ jobs:
     - name: clippy
       run: cargo clippy --workspace --all-targets --all-features -- -D warnings -A clippy::literal_string_with_formatting_args
     - name: fmt
+      continue-on-error: true
       run: cargo fmt --all --check
