--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,20 +10,19 @@ license-file = "LICENSE.txt"
 keywords = ["encryption", "decryption", "XChaCha20Poly1305"]
 categories = ["cryptography"]
 publish = false
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# rust-crypto = "^0.2"
+# rust-crypto = "^0.2.36"
 orion = { version = "^0.17.12", features = ["default"] }
 base64 = "^0.22.1"
-#crossterm = "^0.26.0"
+#crossterm = "^0.29.0"
 rpassword = "^7.4.0"
-#inotify = "0.10.2"
+#inotify = "^0.11.0"
 tokio = "^1.49.0"
 clap = { version = "^4.5.54", features = ["derive"] }
 zeroize = { version = "^1.8.2", features = ["zeroize_derive"] }
-#opaque-ke = "2.0"
-#rand = "^0.8.5"
+#opaque-ke = "^4.0.1"
+#rand = "^0.9.2"
 
 [profile.release]
 opt-level = 3
