--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ tokio = "^1.49.0"
 clap = { version = "^4.5.54", features = ["derive"] }
 zeroize = { version = "^1.8.2", features = ["zeroize_derive"] }
 #opaque-ke = "^4.0.1"
-#rand = "^0.9.2"
+rand = "^0.9.2"
 
 [profile.release]
 opt-level = 3
