--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "filecryption"
 version = "0.9.32"
 edition = "2024"
 rust-version = "1.92.0"
-description = "Secure file encryption using Argon2id and XChaCha20-Poly1305"
+description = "High-security file encryption using Argon2id and XChaCha20-Poly1305"
 repository = "https://github.com/Voornaamenachternaam/filecryption"
 homepage = "https://github.com/Voornaamenachternaam/filecryption"
 license-file = "LICENSE.txt"
