--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,10 @@ name: CI
 
 on: 
   push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
-  workflow_dispatch: {}  # Allows manual trigger from GitHub Actions UI
+  workflow_dispatch: {}
   schedule:
-    - cron: "0 2 * * *"  # Runs daily at 2 AM UTC
+    - cron: "0 2 * * *"
 jobs:
 
   build:
