--- a/.github/workflows/auto-fix.yml
+++ b/.github/workflows/auto-fix.yml
@@ -11,11 +11,8 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-      checks: write
-      security-events: write
-      actions: read
     steps:
-      - uses: actions/checkout@v6.0.0
+      - uses: actions/checkout@v6.0.1
         with:
           fetch-depth: 0
 
@@ -48,16 +45,15 @@ jobs:
           cargo clippy --all-targets --all-features --workspace --fix --allow-dirty --allow-staged || true
 
       - name: Run rustfmt
-        continue-on-error: true
         run: |
-          cargo fmt --all --check
+          cargo fmt --all
 
       - name: Re-run tests
         run: |
           cargo test --workspace
 
       - name: Create branch & PR if there are changes
-        uses: peter-evans/create-pull-request@v8
+        uses: peter-evans/create-pull-request@v8.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "[auto-fix] apply cargo fix / clippy fixes"
@@ -67,4 +63,3 @@ jobs:
             This PR contains automatic fixes from cargo fix / clippy --fix / rustfmt applied by CI.
             Run tests and review before merging.
           labels: automated, auto-fix
-
