--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,13 @@ categories = ["cryptography"]
 publish = false
 
 [dependencies]
-orion = { version = "0.17.12", features = ["default"] }
-argon2 = { version = "0.5.3", default-features = false, features = ["std"] }
-base64 = "0.22.1"
-rpassword = "7.4.0"
-clap = { version = "4.5.54", features = ["derive"] }
-zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
-rand = "0.9.2"
+orion = { version = "^0.17.12", features = ["default"] }
+argon2 = { version = "^0.5.3", default-features = false, features = ["std"] }
+base64 = "^0.22.1"
+rpassword = "^7.4.0"
+clap = { version = "^4.5.54", features = ["derive"] }
+zeroize = { version = "^1.8.2", features = ["zeroize_derive"] }
+rand = "^0.9.2"
 
 [profile.release]
 opt-level = 3
