--- a/.github/workflows/rustversion.yml
+++ b/.github/workflows/rustversion.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v6.0.1
 
       - name: Set up Rust
-        uses: actions-rs/toolchain@v1.0.7
+        uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
           override: true
