--- a/.github/workflows/rustversion.yml
+++ b/.github/workflows/rustversion.yml
@@ -25,11 +25,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v6.0.1
 
-      - name: Set up Rust
-        uses: dtolnay/rust-toolchain@master
+      # 2️⃣ Install Rust toolchain and Clippy (replaces dtolnay/rust-toolchain)
+      - name: Install Rust toolchain and Clippy
+        uses: actions-rust-lang/setup-rust-toolchain@v1.15.2
         with:
           toolchain: stable
-          override: true
+          cache: false
+          matcher: true
 
       - name: Fetch latest Rust version and determine edition
         run: |
