--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -1,10 +1,23 @@
 name: opencode
 
+permissions:
+  actions: write
+  checks: write
+  contents: write
+  deployments: write
+  id-token: write
+  issues: write
+  discussions: write
+  packages: write
+  pages: write
+  pull-requests: write
+  repository-projects: write
+  security-events: write
+  statuses: write
+
 on:
   issue_comment:
-    types: [created]
   pull_request_review_comment:
-    types: [created]
 
 jobs:
   opencode:
@@ -14,11 +27,7 @@ jobs:
       contains(github.event.comment.body, ' /opencode') ||
       startsWith(github.event.comment.body, '/opencode')
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
-      pull-requests: read
-      issues: read
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
