--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,8 @@ opt-level = 3
 lto = true
 strip = true
 codegen-units = 1
+
+[dev-dependencies]
+tempfile = "^3.24.0"
+assert_cmd = "^2.1.2"
+predicates = "^3.1.3"
