--- a/.github/workflows/cc.yml
+++ b/.github/workflows/cc.yml
@@ -31,6 +31,7 @@ jobs:
         run: cargo build --workspace --verbose
 
       - name: cargo test
+        continue-on-error: true
         run: cargo llvm-cov --all-features --lcov --output-path target/lcov.info
 
       - uses: qltysh/qlty-action/coverage@main
