--- a/.github/workflows/cc.yml
+++ b/.github/workflows/cc.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: cargo test
         continue-on-error: true
-        run: cargo llvm-cov --all-features --lcov --output-path target/lcov.info
+        run: cargo llvm-cov --lcov --output-path target/lcov.info
 
       - uses: qltysh/qlty-action/coverage@main
         with:
