Add optional windows-sys dependency and feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ rpassword = "^7.4.0"
 clap = { version = "^4.5.60", features = ["derive"] }
 zeroize = { version = "^1.8.2", features = ["zeroize_derive"] }
 rand = "^0.10.0"
+windows-sys = { version = "^0.61.2", optional = true }
+
+[features]
+windows-replace = ["windows-sys"]
 
 [profile.release]
 opt-level = 3
